methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var go = true
  if (!estFaceMur()){
    avance()
    if (getCouleurSol()==Color.green){
      go=true

    }else{
      go=false
    }
    recule()
  }else[
    go=false
  ]
  return go
}



